[gd_scene load_steps=28 format=2]

[ext_resource path="res://Browser/Dialogs/ImporterDialog.tscn" type="PackedScene" id=1]
[ext_resource path="res://Browser/CenterContainer.gd" type="Script" id=2]
[ext_resource path="res://Browser/Browser.gd" type="Script" id=3]
[ext_resource path="res://Browser/Pagination.tscn" type="PackedScene" id=4]
[ext_resource path="res://Browser/Dialogs/InputBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Material Icons/arrow_upward.svg" type="Texture" id=6]
[ext_resource path="res://Browser/Dialogs/ConfirmationDialog.gd" type="Script" id=7]
[ext_resource path="res://Native/GDNativeFileDialog.gdns" type="Script" id=8]
[ext_resource path="res://Assets/Material Icons/home.svg" type="Texture" id=9]
[ext_resource path="res://Browser/Dialogs/DirectoryMoveDialog.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/Material Icons/folder_open.svg" type="Texture" id=11]
[ext_resource path="res://Startscreen/AcceptDialog.gd" type="Script" id=12]
[ext_resource path="res://Assets/Material Icons/search.svg" type="Texture" id=13]
[ext_resource path="res://Assets/Material Icons/logout.svg" type="Texture" id=14]
[ext_resource path="res://Assets/Material Icons/create_new_folder.svg" type="Texture" id=15]
[ext_resource path="res://addons/godottour/GodotTour.gd" type="Script" id=16]
[ext_resource path="res://addons/godottour/TourStep.gd" type="Script" id=17]
[ext_resource path="res://Browser/Dialogs/OverwriteDialog.tscn" type="PackedScene" id=18]
[ext_resource path="res://Browser/Dialogs/AssetLinksDialog.tscn" type="PackedScene" id=19]

[sub_resource type="Resource" id=1]
script = ExtResource( 17 )
control = NodePath("../../MarginContainer/HBoxContainer/Back")
text = "Goes one directory up."

[sub_resource type="Resource" id=2]
script = ExtResource( 17 )
control = NodePath("../../MarginContainer/HBoxContainer/Home")
text = "Goes to the root directory of your asset directory."

[sub_resource type="Resource" id=3]
script = ExtResource( 17 )
control = NodePath("../../MarginContainer/HBoxContainer/CreateDir")
text = "Creates a new directory. (Directories are only virtual and are not created on your hard drive)"

[sub_resource type="Resource" id=4]
script = ExtResource( 17 )
control = NodePath("../../MarginContainer/HBoxContainer/Search")
text = "Allows you to search for assets and directories. If you are in the root directory, the entire library will be searched."

[sub_resource type="Resource" id=5]
script = ExtResource( 17 )
control = NodePath("../../MarginContainer/HBoxContainer/OpenLibrary")
text = "Opens the library directory with the OS file manager."

[sub_resource type="Resource" id=6]
script = ExtResource( 17 )
control = NodePath("../../MarginContainer2/HBoxContainer/CloseLib")
text = "Closes the library and goes back to the main screen."

[sub_resource type="Resource" id=7]
script = ExtResource( 17 )
control = NodePath("../../MarginContainer2/HBoxContainer/Pagination")
text = "Allows you to navigate through pages of assets."

[sub_resource type="Resource" id=8]
script = ExtResource( 17 )
control = NodePath("")
text = "Last but not least, files or directories can be imported either by dragging them into\\nthis window or manually moving them into the library directory.\\nIMPORTANT: Your files will be moved to the library directory!"

[node name="Browser" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 66.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 1008.0
margin_bottom = 50.0

[node name="Back" type="Button" parent="MarginContainer/HBoxContainer"]
margin_right = 34.0
margin_bottom = 34.0
rect_min_size = Vector2( 34, 34 )
hint_tooltip = "Go to parent"
disabled = true
icon = ExtResource( 6 )
icon_align = 1
expand_icon = true

[node name="Home" type="Button" parent="MarginContainer/HBoxContainer"]
margin_left = 38.0
margin_right = 72.0
margin_bottom = 34.0
rect_min_size = Vector2( 34, 34 )
hint_tooltip = "Go root directory"
disabled = true
icon = ExtResource( 9 )
icon_align = 1
expand_icon = true

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer"]
margin_left = 76.0
margin_right = 314.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.8

[node name="CreateDir" type="Button" parent="MarginContainer/HBoxContainer"]
margin_left = 318.0
margin_right = 352.0
margin_bottom = 34.0
rect_min_size = Vector2( 34, 34 )
hint_tooltip = "Create new directory"
mouse_default_cursor_shape = 2
icon = ExtResource( 15 )
icon_align = 1
expand_icon = true

[node name="Search" type="LineEdit" parent="MarginContainer/HBoxContainer"]
margin_left = 356.0
margin_right = 653.0
margin_bottom = 34.0
size_flags_horizontal = 3
right_icon = ExtResource( 13 )
placeholder_text = "Search"
caret_blink = true

[node name="Control2" type="Control" parent="MarginContainer/HBoxContainer"]
margin_left = 657.0
margin_right = 955.0
margin_bottom = 34.0
size_flags_horizontal = 3

[node name="OpenLibrary" type="Button" parent="MarginContainer/HBoxContainer"]
margin_left = 959.0
margin_right = 992.0
margin_bottom = 34.0
rect_min_size = Vector2( 33, 33 )
hint_tooltip = "Open in file manager"
mouse_default_cursor_shape = 2
icon = ExtResource( 11 )
icon_align = 1
expand_icon = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_top = 70.0
margin_right = 1024.0
margin_bottom = 547.0
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="ScrollContainer"]
margin_right = 1014.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Cards" type="HFlowContainer" parent="ScrollContainer/CenterContainer"]
margin_left = 27.0
margin_right = 987.0
margin_bottom = 540.0
rect_min_size = Vector2( 960, 540 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 0
custom_constants/hseparation = 0

[node name="MarginContainer2" type="MarginContainer" parent="."]
margin_top = 551.0
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_right = 16
custom_constants/margin_top = 8
custom_constants/margin_left = 16
custom_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2"]
margin_left = 16.0
margin_top = 8.0
margin_right = 1008.0
margin_bottom = 41.0

[node name="CloseLib" type="Button" parent="MarginContainer2/HBoxContainer"]
margin_right = 33.0
margin_bottom = 33.0
rect_min_size = Vector2( 33, 33 )
hint_tooltip = "Close library"
mouse_default_cursor_shape = 2
icon = ExtResource( 14 )
icon_align = 1
expand_icon = true

[node name="Pagination" parent="MarginContainer2/HBoxContainer" instance=ExtResource( 4 )]
margin_left = 37.0
margin_right = 992.0
margin_bottom = 33.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="AssetLinksDialog" parent="CanvasLayer" instance=ExtResource( 19 )]

[node name="OverwriteDialog" parent="CanvasLayer" instance=ExtResource( 18 )]
visible = false

[node name="DirectoryMoveDialog" parent="CanvasLayer" instance=ExtResource( 10 )]
popup_exclusive = true

[node name="ImporterDialog" parent="CanvasLayer" instance=ExtResource( 1 )]

[node name="InputBox" parent="CanvasLayer" instance=ExtResource( 5 )]
visible = false
popup_exclusive = true

[node name="DeleteDirDialog" type="ConfirmationDialog" parent="CanvasLayer"]
margin_right = 439.0
margin_bottom = 158.0
popup_exclusive = true
window_title = ""
dialog_text = "Are you sure you want to delete this directory?
This can't be undone!
All assets with no directory will be moved into the root directory."
dialog_autowrap = true
script = ExtResource( 7 )

[node name="InfoDialog" type="AcceptDialog" parent="CanvasLayer"]
margin_right = 88.0
margin_bottom = 80.0
popup_exclusive = true
window_title = ""
script = ExtResource( 12 )

[node name="GodotTour" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 16 )
steps = [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ]

[node name="NativeDialog" type="Node" parent="."]
script = ExtResource( 8 )

[connection signal="pressed" from="MarginContainer/HBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Home" to="." method="_on_Home_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/CreateDir" to="." method="_on_CreateDir_pressed"]
[connection signal="text_changed" from="MarginContainer/HBoxContainer/Search" to="." method="_on_Search_text_changed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/OpenLibrary" to="." method="_on_OpenLibrary_pressed"]
[connection signal="item_rect_changed" from="ScrollContainer" to="ScrollContainer" method="_on_item_rect_changed"]
[connection signal="pressed" from="MarginContainer2/HBoxContainer/CloseLib" to="." method="_on_CloseLib_pressed"]
[connection signal="page_update" from="MarginContainer2/HBoxContainer/Pagination" to="." method="_on_Pagination_page_update"]
[connection signal="popup_hide" from="CanvasLayer/AssetLinksDialog" to="." method="_on_AssetLinksDialog_popup_hide"]
[connection signal="popup_hide" from="CanvasLayer/OverwriteDialog" to="." method="_on_OverwriteDialog_popup_hide"]
[connection signal="move_item" from="CanvasLayer/DirectoryMoveDialog" to="." method="_on_DirectoryMoveDialog_move_item"]
[connection signal="refresh_ui" from="CanvasLayer/DirectoryMoveDialog" to="." method="_on_DirectoryMoveDialog_refresh_ui"]
[connection signal="name_entered" from="CanvasLayer/InputBox" to="." method="_on_InputBox_name_entered"]
[connection signal="confirmed" from="CanvasLayer/DeleteDirDialog" to="." method="_on_DeleteDirDialog_confirmed"]
[connection signal="tour_finished" from="CanvasLayer/GodotTour" to="." method="_on_GodotTour_tour_finished"]
